# V3D_SPHERE

./: .gitignore  .pre-commit-config.yaml  README.md  generate_chessboard_6x9.py  jugar_bolos.rdk  pyproject.toml  requirements.txt
Programas RoboDK/: .aruco_config.txt  CALIBRACION_DOCS.md  CAMBIOS.md  FuncionesBase.py  FuncionesRobot.py  README.md  aruco_lib.py  ball_detector.py  calibracion.py  dependencies.txt  ejemplo_calibracion.py  hsv_tuner.py  main.py  main_robot.py  positions.json  qr_depth.py  test_aruco.py  test_camara.py  tracker.py
main/: Cam_administrator.py  ball_detector.py  ball_position_output.json  bolo.stl  homography_Calibrator.py  main_tester.py  robodk_helpers.py  robodk_worker.py  v3d_api.py  vision_processor.py  vision_renderer.py  vision_state.py
mainV3D_no_robodk/: ARUCO_reader.py  Cam_administrator.py  ball_detector.py  ball_position_output.json  bolo.stl  example_integration.py  generate_bowling_pin_stl.py  homography_Calibrator.py  main_tester.py  positions.json  robodk_worker.py  v3d_api.py  vision_processor.py  vision_state.py
tracking/: ball_detector.py  main.py  qr_depth.py  tracker.py
